# AI-shield-v0.1

./: .env  CHATBOT_FIX.md  FRONTEND_INTEGRATION.md  HUGGINGFACE_INTEGRATION.md  LOGIN_FIX_GUIDE.md  PROJECT_STATUS.md  README-LOCAL.md  README.md  SIMPLIFIED_CHATBOT_SETUP.md  app.tsx  docker-compose.yml  env.example  index.html  init_db.py  package-lock.json  package.json  setup-frontend.sh  setup-huggingface.sh  start-conda.bat  start-local-simple.bat  start-local.bat  start-local.sh  start.bat  start.sh  tailwind.config.js  test_auth.py  test_chatbot.py  test_chatbot_quick.py  test_chatbot_simple.py
backend/: .gitignore  Dockerfile  README.md  main.py  model.py  pyproject.toml  requirements-local.txt  requirements-simple.txt  requirements.txt  routes.py  scam_models.py  scam_schemas.py  threat_intel.db  users.db
backend/app/api/v1/: api.py  routers.py
backend/app/clients/hibp/: __init__.py  client.py  (+2 more)
backend/app/core/: config.py  database.py  db.py  logging.py  security.py  utils.py
backend/app/db/: chatbot.py  threat_intelligence.py  types.py  users.py
backend/app/models/: __init__.py  chatbot.py  threat_intelligence.py  user.py  users.py
backend/app/schemas/: threat_intelligence.py  users.py
backend/app/services/: abuseipdb_service.py  base.py  chatbot.py  chatbot_service.py  hibp.py  hibp_service.py  huggingface.py  huggingface_service.py  openai_service.py  phishscan.py  phishscan_service.py  threat_intelligence.py
backend/migrations/: env.py
backend/migrations/versions/: 4a8013c2448b_add_deletion_flag_to_models.py  9b28535849de_inital_migration.py
(+49 files in other folders)
